--- a/index.html
+++ b/index.html
@@ -14,8 +14,16 @@
 </head>
 
 <body>
+
+  <script src="env.js"></script>
+  <script src="ActivationFunctions.js"></script>
+  <script src="Population.js"></script>
+  <script src="Generation.js"></script>
+  <script src="Neuron.js"></script>
   <script src="NeuralNetwork.js"></script>
   <script src="p5.min.js"></script>
+  <script src="FitnessFunctions.js"></script>
+  <script src="game.js"></script>
   <script src="visualize.js"></script>
 </body>
 </html>
